Extend User model

--- a/SpicyCo/SpicyCo.API/appsettings.json
+++ b/SpicyCo/SpicyCo.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=SpicyCo;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-B8UDJS6\\MSSQLSERVER01;Initial Catalog=SpicyCo;Integrated Security=True;"
   },
   "AllowedHosts": "*"
 }
